--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="et.nWifiManager"
     android:versionCode="14"
-    android:versionName="@string/version" >
+    android:versionName="1.8" >
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="19" />
