--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -36,6 +36,6 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
-        <service android:name=".AnalyzeIntentService" />
+        <service android:name=".AnalyzeService" />
     </application>
 </manifest>
